# AiIntentRouting

./: .dockerignore  .env.closed-network.example  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  alembic.ini  compose.yaml  mypy.ini  pyproject.toml
.github/workflows/: ci.yml
.superpowers/sdd/: 2026-07-15-application-admin-task-1-report.md  2026-07-15-application-admin-task-4-report.md  2026-07-15-application-admin-task-5-report.md  2026-07-15-application-admin-task-6-report.md  2026-07-15-application-admin-task-9-report.md  2026-07-15-application-admin-task-9b-report.md  final-review-fix-2-report.md  final-review-fix-report.md  final-review-reactivation-fix-report.md  task-1-report.md  task-2-report.md  task-20260721-intent-catalog-ui-4-report.md  task-3-report.md  task-3b-report.md  task-4-report.md  task-5-report.md  task-6-report.md  ux-organization-directory-task-5-report.md
alembic/: env.py
docs/: IntentRouting_Architecture_Classification_Comparison_20260624.md  IntentRouting_PRD_ContextReview_20260624.md  IntentRouting_PRD_v0.2_20260624.md  IntentRouting_ReferenceMaterials_20260624.md  THEME_AND_UX_GUIDE_v1.md
docs/pilot/: README.md  (+11 more)
scripts/: apply_log_retention.py  benchmark_bge_m3.py  compare_csv_baseline.py  export_ops_evidence.py  rewrap_raw_text.py  rotate_api_key.py  run_csv_gate.py  run_dify_smoke_matrix.py  run_local_dev_stack.sh  run_local_dev_stack_macos.sh  run_pilot_e2e_smoke.py  run_pilot_readiness.py  run_pilot_rehearsal.py  seed_pilot.py  smoke_runtime_dify.py  trace_audit_drill.py  verify_bge_m3_package.py
tests/: conftest.py
(+439 files in other folders)
