[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "intent-routing"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.13",
  "cryptography>=42.0",
  "fastapi>=0.111",
  "pydantic-settings>=2.3",
  "pydantic>=2.7",
  "psycopg[binary]>=3.2",
  "pgvector>=0.3",
  "python-multipart>=0.0.9",
  "sqlalchemy>=2.0",
  "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
embedding = ["FlagEmbedding>=1.2", "torch>=2.3", "sentence-transformers>=3.0"]
dev = [
  "httpx>=0.27",
  "mypy>=1.10",
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "ruff>=0.5",
]

[dependency-groups]
dev = [
  "httpx>=0.27",
  "mypy>=1.10",
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "ruff>=0.5",
]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/intent_routing"]
